Fix: overflow dropdown

--- a/Frontend/pages/components/nav/nav.css
+++ b/Frontend/pages/components/nav/nav.css
@@ -91,7 +91,7 @@ nav .nav-links #sign-up nav .nav-links *:not(:first-child) {
   }
 }
 
-.Profile_user{
+.Profile_user {
   max-width: 60px;
   height: 50px;
   cursor: pointer;
@@ -102,31 +102,30 @@ nav .nav-links #sign-up nav .nav-links *:not(:first-child) {
   width: 100%;
   height: 100%;
 }
-.Profile_user:hover{
-  opacity: .7;
+.Profile_user:hover {
+  opacity: 0.7;
 }
 
-
 .slide {
-    position: absolute;
-    right: 40px;
-    top: 76px;
-    width: 200px;
-    display: none;
-    padding: 0;
-    margin: 0;
-    z-index: 10;
-    border-radius: 8px;
-    list-style-type: none;
-    background-color: #fff !important;
-    box-shadow: 0 -4px 32px #0003;
+  position: absolute;
+  right: 40px;
+  top: 76px;
+  width: 200px;
+  display: none;
+  padding: 0;
+  margin: 0;
+  z-index: 10;
+  border-radius: 8px;
+  list-style-type: none;
+  background-color: #fff !important;
+  box-shadow: 0 -4px 32px #0003;
 }
 .slide li {
   display: flex;
   align-items: center;
   padding: 20px;
 }
-.slide .dropdown-toggle li:hover{
+.slide .dropdown-toggle li:hover {
   background-color: red;
 }
 /* Show the slide when the 'active' class is added */
